--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,3 +1,5 @@
+# Read about fixtures at
+# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 one:
   title: MyString
   description: MyText
@@ -17,4 +19,4 @@ ruby:
     language out there.  If you need to get working programs
     delivered fast, you should add Ruby to your toolbox.
   price:       49.50
-  image_url:   ruby.png 
+  image_url:   ruby.png
